--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
   },
   "dependencies": {
+    "@types/mongodb": "^4.0.7",
     "bcrypt": "^5.0.1",
     "config": "^3.3.7",
     "cors": "^2.8.5",
